<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <ImageView
        android:id="@+id/background_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/MainBackground"
        android:contentDescription="@string/main_background"/>

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:textSize="@dimen/settings_title_text_size"
        android:layout_marginHorizontal="@dimen/settings_horizontal_margin"
        android:layout_marginTop="@dimen/settings_title_margin_top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/settings_horizontal_margin"
        >

        <RadioButton
            android:id="@+id/radio_light_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_light_mode" />

        <RadioButton
            android:id="@+id/radio_dark_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_dark_mode" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/settings_apply_btn"
        android:layout_marginHorizontal="@dimen/settings_horizontal_margin" />





</androidx.constraintlayout.widget.ConstraintLayout>