<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/MainBackground"
        android:contentDescription="@string/main_background"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_display_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_display_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_vertical_lines" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_end="@dimen/margin_vertical_lines"
        app:layout_constraintTop_toBottomOf="@+id/guideline_vertical_left" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_keyboard_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_keyboard_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_title_bottom"
        android:text="@string/calc_title"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/display"
        app:layout_constraintStart_toStartOf="@id/display" />


    <TextView
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/display_horizontal_margin"
        android:background="@drawable/display_background"
        android:ems="9"
        android:maxLength="10"
        android:gravity="center_vertical|end"
        android:textSize="@dimen/display_text_size"
        android:paddingHorizontal="@dimen/display_horizontal_padding"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_display_top"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_display_bottom"
        app:layout_constraintLeft_toRightOf="@id/guideline_vertical_left"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical_right" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/keyboard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_keyboard_bottom"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical_right"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_keyboard_top">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_ac"
            style="@style/LightGreyButton"
            android:text="@string/key_ac"
            app:layout_constraintBottom_toTopOf="@+id/key_7"
            app:layout_constraintEnd_toStartOf="@+id/key_plus_minus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_plus_minus"
            style="@style/LightGreyButton"
            android:text="@string/key_plus_minus"
            app:layout_constraintBottom_toTopOf="@+id/key_8"
            app:layout_constraintEnd_toStartOf="@+id/key_percent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/key_ac"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_percent"
            style="@style/LightGreyButton"
            android:text="@string/key_percent"
            app:layout_constraintBottom_toTopOf="@+id/key_9"
            app:layout_constraintEnd_toStartOf="@+id/key_divide"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/key_plus_minus"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_divide"
            style="@style/OrangeButton"
            android:text="@string/key_divide"
            app:layout_constraintBottom_toTopOf="@+id/key_multiply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/key_percent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_7"
            style="@style/DigitButton"
            android:text="@string/key_7"
            app:layout_constraintBottom_toTopOf="@+id/key_4"
            app:layout_constraintEnd_toEndOf="@id/key_ac"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/key_ac"
            app:layout_constraintTop_toBottomOf="@+id/key_ac" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_8"
            style="@style/DigitButton"
            android:text="@string/key_8"
            app:layout_constraintBottom_toTopOf="@+id/key_5"
            app:layout_constraintEnd_toEndOf="@id/key_plus_minus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/key_plus_minus"
            app:layout_constraintTop_toBottomOf="@+id/key_plus_minus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_9"
            style="@style/DigitButton"
            android:text="@string/key_9"
            app:layout_constraintBottom_toTopOf="@+id/key_6"
            app:layout_constraintEnd_toEndOf="@id/key_percent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/key_percent"
            app:layout_constraintTop_toBottomOf="@+id/key_percent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_multiply"
            style="@style/OrangeButton"
            android:text="@string/key_multiply"
            app:layout_constraintBottom_toTopOf="@+id/key_minus"
            app:layout_constraintEnd_toEndOf="@id/key_divide"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/key_divide"
            app:layout_constraintTop_toBottomOf="@+id/key_divide" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_4"
            style="@style/DigitButton"
            android:text="@string/key_4"
            app:layout_constraintBottom_toTopOf="@+id/key_1"
            app:layout_constraintEnd_toEndOf="@id/key_7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/key_7"
            app:layout_constraintTop_toBottomOf="@+id/key_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_5"
            style="@style/DigitButton"
            android:text="@string/key_5"
            app:layout_constraintBottom_toTopOf="@+id/key_2"
            app:layout_constraintEnd_toEndOf="@id/key_8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/key_8"
            app:layout_constraintTop_toBottomOf="@+id/key_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_6"
            style="@style/DigitButton"
            android:text="@string/key_6"
            app:layout_constraintBottom_toTopOf="@+id/key_3"
            app:layout_constraintEnd_toEndOf="@id/key_9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/key_9"
            app:layout_constraintTop_toBottomOf="@+id/key_9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_minus"
            style="@style/OrangeButton"
            android:text="@string/key_minus"
            app:layout_constraintBottom_toTopOf="@+id/key_plus"
            app:layout_constraintEnd_toEndOf="@id/key_multiply"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/key_multiply"
            app:layout_constraintTop_toBottomOf="@+id/key_multiply" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_1"
            style="@style/DigitButton"
            android:text="@string/key_1"
            app:layout_constraintBottom_toTopOf="@+id/key_0"
            app:layout_constraintEnd_toEndOf="@id/key_4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/key_4"
            app:layout_constraintTop_toBottomOf="@+id/key_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_2"
            style="@style/DigitButton"
            android:text="@string/key_2"
            app:layout_constraintBottom_toTopOf="@+id/key_0"
            app:layout_constraintEnd_toEndOf="@id/key_5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/key_5"
            app:layout_constraintTop_toBottomOf="@+id/key_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_3"
            style="@style/DigitButton"
            android:text="@string/key_3"
            app:layout_constraintBottom_toTopOf="@+id/key_decimal"
            app:layout_constraintEnd_toEndOf="@id/key_6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/key_6"
            app:layout_constraintTop_toBottomOf="@+id/key_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_plus"
            style="@style/OrangeButton"
            android:text="@string/key_plus"
            app:layout_constraintBottom_toTopOf="@+id/key_equal"
            app:layout_constraintEnd_toEndOf="@id/key_minus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/key_minus"
            app:layout_constraintTop_toBottomOf="@+id/key_minus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_0"
            style="@style/DigitButton"
            android:layout_width="0dp"
            android:text="@string/key_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/key_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/key_1"
            app:layout_constraintTop_toBottomOf="@+id/key_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_decimal"
            style="@style/DigitButton"
            android:text="@string/key_decimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/key_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/key_3"
            app:layout_constraintTop_toBottomOf="@+id/key_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_equal"
            style="@style/OrangeButton"
            android:text="@string/key_equal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/key_plus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/key_plus"
            app:layout_constraintTop_toBottomOf="@+id/key_plus" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
